# mu-sven-macos

./: .gitignore  CLAUDE.md  CMakeLists.txt  DIAGNOSTICS.md  Data  QUICKSTART.md  README.md  SKELETON_TEST.md  SVEN_TERRAIN_FINDINGS.md  alpha_mask.pgm  analyze_indices.py  bmd_inspect  bmd_inspect.cpp  camera_save.txt  check_braces.py  check_syntax.gd  city_center.png.import  client_log.txt  dirt_debug.png.import  dirt_v2.png.import  dirt_v3.png.import  dump_att.gd  dump_att.gd.uid  dump_map.gd  dump_map.gd.uid  dump_tavern.gd  export_presets.cfg  game_log.txt  grass_debug.png.import  grass_v2.png.import  grass_v3.png.import  heightmap_fix_check.png.import  imgui.ini  launch.sh  layer1_indices.pgm  layer2_indices.pgm  line.txt  line_orb.txt  lorencia_tasks.md  main.gd  (+43 more)
addons/mu_tools/: analyze_object_2507.gd  animation_builder.gd  animation_builder.gd.uid  animation_converter.gd  animation_converter.gd.uid  benchmark_file_util.gd  bmd_converter_headless.gd  bmd_converter_headless.gd.uid  bmd_parser.gd  bmd_parser.gd.uid  coordinate_utils.gd  coordinate_utils.gd.uid  debug_underground_objects.gd  diagnostic_scales.gd  find_object.gd  mesh_builder.gd  mesh_builder.gd.uid  mu_animation_registry.gd  mu_animation_registry.gd.uid  mu_character.gd.uid  mu_coordinates.gd  mu_decryptor.gd  mu_decryptor.gd.uid  mu_environment.gd  mu_file_util.gd  mu_import_plugin.gd  mu_import_plugin.gd.uid  mu_logger.gd  mu_material_factory.gd  mu_material_factory.gd.uid  mu_object_effect_manager.gd  mu_preflight.gd  mu_render_settings.gd  mu_state_machine.gd  mu_state_machine.gd.uid  mu_terrain.gd  (+23 more)
assets/: assembled_player.tscn
client/: CMakeLists.txt  client_log.txt
core/: mu_character_base.gd.uid
diagnostics/: check_syntax.gd  check_syntax.gd.uid  verify_offset_fix.gd  verify_offset_fix.gd.uid
docs/: animation-system.md  bmd-format.md  build-and-project.md  character-system.md  item-and-vendor-system.md  monster-system.md  reference-navigation.md  rendering.md  terrain-and-environment.md  texture-formats.md  ui-system.md  world-and-quest-system.md
include/: BMDParser.hpp  BMDStructs.hpp  BMDUtils.hpp  ClientPacketHandler.hpp  ClientTypes.hpp  FireEffect.hpp  GameUI.hpp  GrassRenderer.hpp  GroundItemRenderer.hpp  HUD.hpp  HeroCharacter.hpp  InputHandler.hpp  InventoryUI.hpp  ItemModelManager.hpp  MeshBuffers.hpp  MockData.hpp  MonsterManager.hpp  NetworkClient.hpp  NpcManager.hpp  ObjectRenderer.hpp  Screenshot.hpp  ServerConnection.hpp  Shader.hpp  Sky.hpp  Terrain.hpp  TextureLoader.hpp  UICoords.hpp  VFXManager.hpp  ViewerCommon.hpp
scenes/: bootstrap.tscn  character_preview.tscn  check_bounds.gd  check_bounds.gd.uid  coordinate_test.gd  coordinate_test.gd.uid  coordinate_test.tscn  diag_etc03.gd  diag_etc03.gd.uid  fence_test.gd  fence_test.gd.uid  fence_test.tscn  forward_plus_test.tscn  isolate_debug.gd  isolate_debug.gd.uid  isolate_debug.tscn  main.gd  main.gd.uid  main.tscn  main_simple.gd  main_simple.tscn  minimal_test.gd  minimal_test.gd.uid  minimal_test.tscn  model_viewer.gd  model_viewer.tscn  orientation_debugger.tscn  render_test.gd  render_test.tscn  shadow_test.tscn  skeleton_test.gd  skeleton_test.gd.uid  skeleton_test.tscn  terrain_test.gd  terrain_test.gd.uid  test_scene.gd  test_scene.gd.uid  test_scene.tscn  tree_test.gd  tree_test.gd.uid  (+1 more)
scripts/: advanced_render_test.py  analyze_map_indices.gd  analyze_tileground03.py  audit_geometry.gd  batch_convert.sh  batch_export_lorencia.gd  batch_export_lorencia.gd.uid  bmd_refactor.py  check_compile.gd  check_compile.gd.uid  check_indexing.gd  check_indexing.gd.uid  check_map_stats.gd  check_map_stats.gd.uid  check_symmetry.py  convert_bmd.gd  convert_bmd.gd.uid  convert_textures.gd  convert_textures.gd.uid  debug_bones.gd  debug_bones.gd.uid  export_beer01.gd  export_beer01.gd.uid  export_obj.gd  export_obj.gd.uid  find_tile_coords.gd  find_tile_coords.gd.uid  find_tile_coords.py  generate_lorencia_full.py  generate_render_verification.py  import_models.gd  inspect_bmd_textures.gd  inspect_bmd_textures.gd.uid  inspect_skeleton.gd  inspect_skeleton.gd.uid  launch_diagnostic.gd  launch_diagnostic.gd.uid  light_control_panel.gd  light_control_panel.gd.uid  model_viewer.gd  (+24 more)
server/: CMakeLists.txt  server_log.txt
server/data/: lorencia_npcs.txt
server/include/: Database.hpp  GameWorld.hpp  PacketDefs.hpp  PacketHandler.hpp  PathFinder.hpp  Server.hpp  Session.hpp  StatCalculator.hpp
server/include/handlers/: CharacterHandler.hpp  CharacterSelectHandler.hpp  CombatHandler.hpp  InventoryHandler.hpp  QuestHandler.hpp  ShopHandler.hpp  WorldHandler.hpp
server/src/: Database.cpp  GameWorld.cpp  PacketHandler.cpp  PathFinder.cpp  Server.cpp  Session.cpp  StatCalculator.cpp  main.cpp
server/src/handlers/: CharacterHandler.cpp  CharacterSelectHandler.cpp  CombatHandler.cpp  InventoryHandler.cpp  QuestHandler.cpp  ShopHandler.cpp  WorldHandler.cpp
shaders/: billboard.frag  billboard.vert  leaf.frag  leaf.vert  line.vert  model.frag  model.vert  outline.vert  ui.frag
src/: BMDParser.cpp  BMDUtils.cpp  BoidManager.cpp  Camera.cpp  ClientPacketHandler.cpp  FireEffect.cpp  GameUI.cpp  GrassRenderer.cpp  GroundItemRenderer.cpp  HUD.cpp  HeroCharacter.cpp  InputHandler.cpp  InventoryUI.cpp  ItemDatabase.cpp  ItemModelManager.cpp  MockData.cpp  MonsterManager.cpp  NetworkClient.cpp  NpcManager.cpp  ObjectRenderer.cpp  RayPicker.cpp  Screenshot.cpp  ServerConnection.cpp  Sky.cpp  Terrain.cpp  TerrainParser.cpp  TextureLoader.cpp  UITexture.cpp  UIWidget.cpp  VFXManager.cpp  ViewerCommon.cpp  char_viewer_main.cpp  diag_nearby_objects.cpp  main.cpp  model_viewer_main.cpp  monster_viewer_main.cpp
tools/: check_alpha.gd  check_alpha.gd.uid  check_colors.gd  check_colors.gd.uid  decode_tga.gd  decode_tga.gd.uid  diagnostic.gd  diagnostic.gd.uid  generate_orientation_grid.gd  generate_orientation_grid.gd.uid  map_diagnostic.gd  map_diagnostic.gd.uid  river_diagnostic.gd  river_diagnostic.gd.uid  test_alpha_ignore.gd  test_alpha_ignore.gd.uid  test_tga_fix.gd  test_tga_fix.gd.uid  visualize_layers.gd  visualize_layers.gd.uid
(+449 files in other folders)
